# transformer-implementations

./: .editorconfig  .gitignore  .pylintrc  README.md  mypy.ini  pyproject.toml  requirements.dev.txt
notebooks/: AnnotatedTransformer.ipynb  Hello World.ipynb
python_template/: __init__.py  __main__.py  lib.py
scripts/: generate_requirements.sh
transformer_implementations/: __init__.py  __main__.py  lib.py  rwkv.py  transformer.py
