[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Template for Python projects"
name = "python_template"
packages = [{ include = "python_template" }]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
jupyter = "^1.0.0"
mypy = "^1.8.0"
poetry-plugin-export = "^1.6.0"
pylint = "^3.0.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
