[tool.poetry]
authors = ["willclarktech <willclarktech@users.noreply.github.com>"]
description = "Various implementations of transformers etc."
name = "transformer_implementations"
packages = [{ include = "transformer_implementations" }]
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
torch = "^2.1.2"
torchdata = "^0.7.1"
torchtext = "^0.16.2"
spacy = "^3.7.2"
altair = "^5.2.0"
jupytext = "^1.16.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
jupyter = "^1.0.0"
mypy = "^1.8.0"
poetry-plugin-export = "^1.6.0"
pylint = "^3.0.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
